Added File replace functionality to API
